--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
   "builds": [{ "src": "app.py", "use": "@vercel/python" }],
-  "routes": [{ "src": "/(.*)", "dest": "app.py" }]
+  "includeFiles": ["rent_pipe.pkl"]
 }
